--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -7,14 +7,22 @@ ADC1.OffsetSignedSaturation-2\#ChannelRegularConversion=DISABLE
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
-FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
+FREERTOS.Queues01=ForcesensorADC_to_SessionController,16,force_sensor_adc_to_session_controller,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL;Forcesensor,8,128,forcesensorADCTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -26,22 +34,24 @@ MMTConfigApplied=false
 Mcu.CPN=STM32H743IIT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC1
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM14
-Mcu.IP13=TIM16
-Mcu.IP14=USART1
-Mcu.IP15=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C3
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=16
+Mcu.IP1=ADC2
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=TIM1
+Mcu.IP13=TIM2
+Mcu.IP14=TIM14
+Mcu.IP15=TIM16
+Mcu.IP16=USART1
+Mcu.IP17=USB_OTG_FS
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C3
+Mcu.IP5=MEMORYMAP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SDMMC1
+Mcu.IP9=SPI1
+Mcu.IPNb=18
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -61,53 +71,56 @@ Mcu.Pin20=PA6
 Mcu.Pin21=PA7
 Mcu.Pin22=PC4
 Mcu.Pin23=PC5
-Mcu.Pin24=PB10
-Mcu.Pin25=PH6
-Mcu.Pin26=PH7
-Mcu.Pin27=PH8
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin24=PB1
+Mcu.Pin25=PB10
+Mcu.Pin26=PH6
+Mcu.Pin27=PH7
+Mcu.Pin28=PH8
+Mcu.Pin29=PC8
 Mcu.Pin3=PE6
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13 (JTMS/SWDIO)
-Mcu.Pin36=PA14 (JTCK/SWCLK)
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PC9
+Mcu.Pin31=PA8
+Mcu.Pin32=PA9
+Mcu.Pin33=PA10
+Mcu.Pin34=PA11
+Mcu.Pin35=PA12
+Mcu.Pin36=PA13 (JTMS/SWDIO)
+Mcu.Pin37=PA14 (JTCK/SWCLK)
+Mcu.Pin38=PC10
+Mcu.Pin39=PC11
 Mcu.Pin4=PI8
-Mcu.Pin40=PD2
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PD7
-Mcu.Pin44=PG9
-Mcu.Pin45=PG10
-Mcu.Pin46=PG11
-Mcu.Pin47=PB9
-Mcu.Pin48=PI4
-Mcu.Pin49=PI5
+Mcu.Pin40=PC12
+Mcu.Pin41=PD2
+Mcu.Pin42=PD5
+Mcu.Pin43=PD6
+Mcu.Pin44=PD7
+Mcu.Pin45=PG9
+Mcu.Pin46=PG10
+Mcu.Pin47=PG11
+Mcu.Pin48=PB9
+Mcu.Pin49=PI4
 Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin50=PI6
-Mcu.Pin51=PI7
-Mcu.Pin52=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin53=VP_SYS_VS_tim17
-Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin57=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=PI5
+Mcu.Pin51=PI6
+Mcu.Pin52=PI7
+Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin54=VP_SYS_VS_tim17
+Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin59=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PF6
 Mcu.Pin8=PF9
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=58
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -188,6 +201,8 @@ PA8.Signal=I2C3_SCL
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.Locked=true
+PB1.Signal=ADCx_INP5
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ILI_SPI2_SCK
 PB10.Mode=Full_Duplex_Master
@@ -371,7 +386,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -463,6 +478,8 @@ RCC.VCOInput2Freq_Value=12500000
 RCC.VCOInput3Freq_Value=12500000
 SH.ADCx_INP10.0=ADC1_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=1
+SH.ADCx_INP5.0=ADC2_INP5,IN5-Single-Ended
+SH.ADCx_INP5.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
@@ -514,6 +531,8 @@ VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
