--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -13,7 +13,8 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
+FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -29,10 +30,11 @@ Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=SYS
 Mcu.IP11=TIM1
-Mcu.IP12=TIM14
-Mcu.IP13=TIM16
-Mcu.IP14=USART1
-Mcu.IP15=USB_OTG_FS
+Mcu.IP12=TIM13
+Mcu.IP13=TIM14
+Mcu.IP14=TIM16
+Mcu.IP15=USART1
+Mcu.IP16=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C3
 Mcu.IP4=MEMORYMAP
@@ -41,7 +43,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SPI1
 Mcu.IP9=SPI2
-Mcu.IPNb=16
+Mcu.IPNb=17
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -95,14 +97,15 @@ Mcu.Pin51=PI7
 Mcu.Pin52=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin53=VP_SYS_VS_tim17
 Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin57=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin55=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin58=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PF6
 Mcu.Pin8=PF9
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=58
+Mcu.PinsNb=59
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -124,6 +127,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -371,7 +375,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_TIM13_Init-TIM13-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -491,6 +495,9 @@ SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
+TIM13.IPParameters=Prescaler,Period
+TIM13.Period=40-1
+TIM13.Prescaler=200-1
 TIM14.Channel=TIM_CHANNEL_1
 TIM14.IPParameters=Channel
 TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -508,6 +515,8 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_tim17.Mode=TIM17
 VP_SYS_VS_tim17.Signal=SYS_VS_tim17
+VP_TIM13_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM13_VS_ClockSourceINT.Signal=TIM13_VS_ClockSourceINT
 VP_TIM14_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM14_VS_ClockSourceINT.Signal=TIM14_VS_ClockSourceINT
 VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
