osMessageQueue from xQueue: forgot to change from LCD to LUMEX_LCD on the pins, moved gpio LUMEX_LCD_EN RESET from loop to interrupt

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -1,12 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,OffsetSignedSaturation-2\#ChannelRegularConversion,NbrOfConversionFlag,master
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetSignedSaturation-2\#ChannelRegularConversion=DISABLE
-ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -26,86 +18,84 @@ MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H743IIT6
 Mcu.Family=STM32H7
-Mcu.IP0=ADC1
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM13
-Mcu.IP13=TIM14
-Mcu.IP14=TIM16
-Mcu.IP15=USART1
-Mcu.IP16=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C3
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=17
+Mcu.IP0=CORTEX_M7
+Mcu.IP1=FREERTOS
+Mcu.IP10=TIM1
+Mcu.IP11=TIM13
+Mcu.IP12=TIM14
+Mcu.IP13=TIM16
+Mcu.IP14=USART1
+Mcu.IP15=USB_OTG_FS
+Mcu.IP2=I2C3
+Mcu.IP3=MEMORYMAP
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SDMMC1
+Mcu.IP7=SPI1
+Mcu.IP8=SPI2
+Mcu.IP9=SYS
+Mcu.IPNb=16
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
 Mcu.Pin10=PH1-OSC_OUT (PH1)
-Mcu.Pin11=PC0
-Mcu.Pin12=PC1
-Mcu.Pin13=PC2_C
-Mcu.Pin14=PA0
-Mcu.Pin15=PA1
-Mcu.Pin16=PA2
-Mcu.Pin17=PA3
-Mcu.Pin18=PA4
-Mcu.Pin19=PA5
+Mcu.Pin11=PC1
+Mcu.Pin12=PC2_C
+Mcu.Pin13=PA0
+Mcu.Pin14=PA1
+Mcu.Pin15=PA2
+Mcu.Pin16=PA3
+Mcu.Pin17=PA4
+Mcu.Pin18=PA5
+Mcu.Pin19=PA6
 Mcu.Pin2=PE5
-Mcu.Pin20=PA6
-Mcu.Pin21=PA7
-Mcu.Pin22=PC4
-Mcu.Pin23=PC5
-Mcu.Pin24=PB10
-Mcu.Pin25=PH6
-Mcu.Pin26=PH7
-Mcu.Pin27=PH8
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin20=PA7
+Mcu.Pin21=PC4
+Mcu.Pin22=PC5
+Mcu.Pin23=PB10
+Mcu.Pin24=PH6
+Mcu.Pin25=PH7
+Mcu.Pin26=PH8
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
 Mcu.Pin3=PE6
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13 (JTMS/SWDIO)
-Mcu.Pin36=PA14 (JTCK/SWCLK)
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13 (JTMS/SWDIO)
+Mcu.Pin35=PA14 (JTCK/SWCLK)
+Mcu.Pin36=PC10
+Mcu.Pin37=PC11
+Mcu.Pin38=PC12
+Mcu.Pin39=PD2
 Mcu.Pin4=PI8
-Mcu.Pin40=PD2
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PD7
-Mcu.Pin44=PG9
-Mcu.Pin45=PG10
-Mcu.Pin46=PG11
-Mcu.Pin47=PB9
-Mcu.Pin48=PI4
-Mcu.Pin49=PI5
+Mcu.Pin40=PD5
+Mcu.Pin41=PD6
+Mcu.Pin42=PD7
+Mcu.Pin43=PG9
+Mcu.Pin44=PG10
+Mcu.Pin45=PG11
+Mcu.Pin46=PB9
+Mcu.Pin47=PI4
+Mcu.Pin48=PI5
+Mcu.Pin49=PI6
 Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin50=PI6
-Mcu.Pin51=PI7
-Mcu.Pin52=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin53=VP_SYS_VS_tim17
-Mcu.Pin54=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin58=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=PI7
+Mcu.Pin51=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin52=VP_SYS_VS_tim17
+Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin54=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin57=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PF6
 Mcu.Pin8=PF9
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=59
+Mcu.PinsNb=58
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -132,12 +122,12 @@ NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA0.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0.GPIO_Label=LCD_D0
+PA0.GPIO_Label=LUMEX_LCD_D0
 PA0.GPIO_PuPd=GPIO_PULLUP
 PA0.Locked=true
 PA0.Signal=GPIO_Output
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=LCD_D1
+PA1.GPIO_Label=LUMEX_LCD_D1
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Output
@@ -155,32 +145,32 @@ PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA2.GPIO_Label=LCD_D2
+PA2.GPIO_Label=LUMEX_LCD_D2
 PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPIO_Output
 PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=LCD_D3
+PA3.GPIO_Label=LUMEX_LCD_D3
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPIO_Output
 PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA4.GPIO_Label=LCD_D4
+PA4.GPIO_Label=LUMEX_LCD_D4
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=LCD_D5
+PA5.GPIO_Label=LUMEX_LCD_D5
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA6.GPIO_Label=LCD_D6
+PA6.GPIO_Label=LUMEX_LCD_D6
 PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Locked=true
 PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA7.GPIO_Label=LCD_D7
+PA7.GPIO_Label=LUMEX_LCD_D7
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Output
@@ -202,9 +192,6 @@ PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB9.GPIO_PuPd=GPIO_PULLUP
 PB9.Locked=true
 PB9.Signal=GPXTI9
-PC0.GPIOParameters=GPIO_Label
-PC0.GPIO_Label=ADC1_BPM_CTRL_IN
-PC0.Signal=ADCx_INP10
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=ILI_SPI2_MOSI
 PC1.Mode=Full_Duplex_Master
@@ -227,12 +214,12 @@ PC2_C.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC2_C.Mode=Full_Duplex_Master
 PC2_C.Signal=SPI2_MISO
 PC4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC4.GPIO_Label=LCD_EN
+PC4.GPIO_Label=LUMEX_LCD_EN
 PC4.GPIO_PuPd=GPIO_PULLUP
 PC4.Locked=true
 PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PC5.GPIO_Label=LCD_RS
+PC5.GPIO_Label=LUMEX_LCD_RS
 PC5.GPIO_PuPd=GPIO_PULLUP
 PC5.Locked=true
 PC5.Signal=GPIO_Output
@@ -465,8 +452,6 @@ RCC.VCO3OutputFreq_Value=400000000
 RCC.VCOInput1Freq_Value=12500000
 RCC.VCOInput2Freq_Value=12500000
 RCC.VCOInput3Freq_Value=12500000
-SH.ADCx_INP10.0=ADC1_INP10,IN10-Single-Ended
-SH.ADCx_INP10.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
