in progress, nearly there

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -6,7 +6,7 @@ CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
-FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToPidController,3,bool,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_to_pid_controller,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToPidController,3,session_controller_to_pid_controller,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_to_pid_controller,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL;pidTask,32,128,pidTaskEntry,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
