--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -1,4 +1,11 @@
 #MicroXplorer Configuration settings - do not modify
+ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC2.Rank-0\#ChannelRegularConversion=1
+ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -18,23 +25,24 @@ MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H743IIT6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=FREERTOS
-Mcu.IP10=TIM1
-Mcu.IP11=TIM13
-Mcu.IP12=TIM14
-Mcu.IP13=TIM16
-Mcu.IP14=USART1
-Mcu.IP15=USB_OTG_FS
-Mcu.IP2=I2C3
-Mcu.IP3=MEMORYMAP
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SDMMC1
-Mcu.IP7=SPI1
-Mcu.IP8=SPI2
-Mcu.IP9=SYS
-Mcu.IPNb=16
+Mcu.IP0=ADC2
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=SYS
+Mcu.IP11=TIM1
+Mcu.IP12=TIM13
+Mcu.IP13=TIM14
+Mcu.IP14=TIM16
+Mcu.IP15=USART1
+Mcu.IP16=USB_OTG_FS
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C3
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SDMMC1
+Mcu.IP8=SPI1
+Mcu.IP9=SPI2
+Mcu.IPNb=17
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -53,56 +61,61 @@ Mcu.Pin2=PE5
 Mcu.Pin20=PA7
 Mcu.Pin21=PC4
 Mcu.Pin22=PC5
-Mcu.Pin23=PB10
-Mcu.Pin24=PH6
-Mcu.Pin25=PH7
-Mcu.Pin26=PH8
-Mcu.Pin27=PC8
-Mcu.Pin28=PC9
-Mcu.Pin29=PA8
+Mcu.Pin23=PB1
+Mcu.Pin24=PB10
+Mcu.Pin25=PH6
+Mcu.Pin26=PH7
+Mcu.Pin27=PH8
+Mcu.Pin28=PC8
+Mcu.Pin29=PC9
 Mcu.Pin3=PE6
-Mcu.Pin30=PA9
-Mcu.Pin31=PA10
-Mcu.Pin32=PA11
-Mcu.Pin33=PA12
-Mcu.Pin34=PA13 (JTMS/SWDIO)
-Mcu.Pin35=PA14 (JTCK/SWCLK)
-Mcu.Pin36=PC10
-Mcu.Pin37=PC11
-Mcu.Pin38=PC12
-Mcu.Pin39=PD2
+Mcu.Pin30=PA8
+Mcu.Pin31=PA9
+Mcu.Pin32=PA10
+Mcu.Pin33=PA11
+Mcu.Pin34=PA12
+Mcu.Pin35=PA13 (JTMS/SWDIO)
+Mcu.Pin36=PA14 (JTCK/SWCLK)
+Mcu.Pin37=PC10
+Mcu.Pin38=PC11
+Mcu.Pin39=PC12
 Mcu.Pin4=PI8
-Mcu.Pin40=PD5
-Mcu.Pin41=PD6
-Mcu.Pin42=PD7
-Mcu.Pin43=PG9
-Mcu.Pin44=PG10
-Mcu.Pin45=PG11
-Mcu.Pin46=PB9
-Mcu.Pin47=PI4
-Mcu.Pin48=PI5
-Mcu.Pin49=PI6
+Mcu.Pin40=PD2
+Mcu.Pin41=PD5
+Mcu.Pin42=PD6
+Mcu.Pin43=PD7
+Mcu.Pin44=PG9
+Mcu.Pin45=PG10
+Mcu.Pin46=PG11
+Mcu.Pin47=PG14
+Mcu.Pin48=PB9
+Mcu.Pin49=PI4
 Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin50=PI7
-Mcu.Pin51=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin52=VP_SYS_VS_tim17
-Mcu.Pin53=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin54=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin55=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin57=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin50=PI5
+Mcu.Pin51=PI6
+Mcu.Pin52=PI7
+Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin54=VP_SYS_VS_tim17
+Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin56=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin59=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin7=PF6
 Mcu.Pin8=PF9
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=58
+Mcu.PinsNb=60
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -182,6 +195,9 @@ PA8.Signal=I2C3_SCL
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB1.GPIOParameters=GPIO_Label
+PB1.GPIO_Label=ADC2_FORCE_IN
+PB1.Signal=ADCx_INP5
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ILI_SPI2_SCK
 PB10.Mode=Full_Duplex_Master
@@ -282,6 +298,12 @@ PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=ILI_SPI1_SCK
 PG11.Mode=Full_Duplex_Master
 PG11.Signal=SPI1_SCK
+PG14.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PG14.GPIO_Label=ILI_TOUCH_IRQ
+PG14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PG14.GPIO_PuPd=GPIO_NOPULL
+PG14.Locked=true
+PG14.Signal=GPXTI14
 PG9.GPIOParameters=GPIO_Label
 PG9.GPIO_Label=ILI_SPI1_MISO
 PG9.Mode=Full_Duplex_Master
@@ -362,7 +384,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_TIM13_Init-TIM13-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_TIM13_Init-TIM13-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -452,6 +474,10 @@ RCC.VCO3OutputFreq_Value=400000000
 RCC.VCOInput1Freq_Value=12500000
 RCC.VCOInput2Freq_Value=12500000
 RCC.VCOInput3Freq_Value=12500000
+SH.ADCx_INP5.0=ADC2_INP5,IN5-Single-Ended
+SH.ADCx_INP5.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
 SH.GPXTI3.ConfNb=1
 SH.GPXTI4.0=GPIO_EXTI4
