Definitely needs revision, some values I quite literally guessed the necessary values for

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -21,7 +21,7 @@ CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
-FREERTOS.Queues01=ForcesensorADC_to_SessionController,16,force_sensor_adc_to_session_controller,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=ForcesensorADC_to_SessionController,16,force_sensor_adc_to_session_controller,0,Dynamic,NULL,NULL;forcesensorCallback,128,forcesensor_callback,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL;Forcesensor,8,128,forcesensorADCTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -386,7 +386,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_ADC1_Init-ADC1-false-HAL-true,12-MX_I2C3_Init-I2C3-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
