--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -29,11 +29,12 @@ Mcu.IP0=ADC2
 Mcu.IP1=CORTEX_M7
 Mcu.IP10=SYS
 Mcu.IP11=TIM1
-Mcu.IP12=TIM13
-Mcu.IP13=TIM14
-Mcu.IP14=TIM16
-Mcu.IP15=USART1
-Mcu.IP16=USB_OTG_FS
+Mcu.IP12=TIM2
+Mcu.IP13=TIM13
+Mcu.IP14=TIM14
+Mcu.IP15=TIM16
+Mcu.IP16=USART1
+Mcu.IP17=USB_OTG_FS
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C3
 Mcu.IP4=MEMORYMAP
@@ -42,7 +43,7 @@ Mcu.IP6=RCC
 Mcu.IP7=SDMMC1
 Mcu.IP8=SPI1
 Mcu.IP9=SPI2
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -97,15 +98,16 @@ Mcu.Pin52=PI7
 Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin54=VP_SYS_VS_tim17
 Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin59=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM16_VS_ClockSourceINT
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
+Mcu.Pin60=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PF6
 Mcu.Pin8=PF9
 Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=60
+Mcu.PinsNb=61
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -517,6 +519,9 @@ TIM16.IPParameters=Channel,Prescaler,Period,AutoReloadPreload,Pulse
 TIM16.Period=200-1
 TIM16.Prescaler=100-1
 TIM16.Pulse=0
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=Prescaler,AutoReloadPreload
+TIM2.Prescaler=200-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -535,6 +540,8 @@ VP_TIM16_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM16_VS_ClockSourceINT.Signal=TIM16_VS_ClockSourceINT
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
