Created the task for forcesensor but need to fix issue with callback interrupt in main

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -14,7 +14,7 @@ CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
 FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL;forcesensorToSessionController,16,float,0,Dynamic,NULL,NULL;sessionControllerToForcesensor,16,bool,0,Dynamic,NULL,NULL;adcCallbackForcesensor,16,adc_callback_to_forcesensor,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL;bpmTask,40,128,bpmCtrlTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=lcdTask,16,1024,lcdDisplayTask,Default,NULL,Dynamic,NULL,NULL;bpmTask,40,128,bpmCtrlTask,Default,NULL,Dynamic,NULL,NULL;forcesensorTask,8,128,forcesensorCtrlTask01,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
