new pins, new configs

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -6,6 +6,13 @@ ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
 ADC2.Rank-0\#ChannelRegularConversion=1
 ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -18,96 +25,99 @@ FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL;bpmTas
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C3.IPParameters=Timing
-I2C3.Timing=0x00C0EAFF
+I2C4.I2C_Speed_Mode=I2C_Fast
+I2C4.IPParameters=Timing,I2C_Speed_Mode
+I2C4.Timing=0x00401959
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32H743IIT6
 Mcu.Family=STM32H7
 Mcu.IP0=ADC2
-Mcu.IP1=CORTEX_M7
-Mcu.IP10=SYS
-Mcu.IP11=TIM1
-Mcu.IP12=TIM2
-Mcu.IP13=TIM13
-Mcu.IP14=TIM14
-Mcu.IP15=TIM16
-Mcu.IP16=USART1
-Mcu.IP17=USB_OTG_FS
-Mcu.IP2=FREERTOS
-Mcu.IP3=I2C3
-Mcu.IP4=MEMORYMAP
-Mcu.IP5=NVIC
-Mcu.IP6=RCC
-Mcu.IP7=SDMMC1
-Mcu.IP8=SPI1
-Mcu.IP9=SPI2
-Mcu.IPNb=18
+Mcu.IP1=ADC3
+Mcu.IP10=SPI2
+Mcu.IP11=SYS
+Mcu.IP12=TIM1
+Mcu.IP13=TIM2
+Mcu.IP14=TIM13
+Mcu.IP15=TIM14
+Mcu.IP16=TIM16
+Mcu.IP17=USART1
+Mcu.IP18=USB_OTG_FS
+Mcu.IP2=CORTEX_M7
+Mcu.IP3=FREERTOS
+Mcu.IP4=I2C4
+Mcu.IP5=MEMORYMAP
+Mcu.IP6=NVIC
+Mcu.IP7=RCC
+Mcu.IP8=SDMMC1
+Mcu.IP9=SPI1
+Mcu.IPNb=19
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
 Mcu.Pin1=PE4
-Mcu.Pin10=PH1-OSC_OUT (PH1)
-Mcu.Pin11=PC1
-Mcu.Pin12=PC2_C
-Mcu.Pin13=PA0
-Mcu.Pin14=PA1
-Mcu.Pin15=PA2
-Mcu.Pin16=PA3
-Mcu.Pin17=PA4
-Mcu.Pin18=PA5
-Mcu.Pin19=PA6
+Mcu.Pin10=PF9
+Mcu.Pin11=PH0-OSC_IN (PH0)
+Mcu.Pin12=PH1-OSC_OUT (PH1)
+Mcu.Pin13=PC1
+Mcu.Pin14=PC2_C
+Mcu.Pin15=PA0
+Mcu.Pin16=PA1
+Mcu.Pin17=PA2
+Mcu.Pin18=PA3
+Mcu.Pin19=PA4
 Mcu.Pin2=PE5
-Mcu.Pin20=PA7
-Mcu.Pin21=PC4
-Mcu.Pin22=PC5
-Mcu.Pin23=PB1
-Mcu.Pin24=PB10
-Mcu.Pin25=PH6
-Mcu.Pin26=PH7
-Mcu.Pin27=PH8
-Mcu.Pin28=PC8
-Mcu.Pin29=PC9
+Mcu.Pin20=PA5
+Mcu.Pin21=PA6
+Mcu.Pin22=PA7
+Mcu.Pin23=PC4
+Mcu.Pin24=PC5
+Mcu.Pin25=PB1
+Mcu.Pin26=PB10
+Mcu.Pin27=PH6
+Mcu.Pin28=PH7
+Mcu.Pin29=PH11
 Mcu.Pin3=PE6
-Mcu.Pin30=PA8
-Mcu.Pin31=PA9
-Mcu.Pin32=PA10
-Mcu.Pin33=PA11
-Mcu.Pin34=PA12
-Mcu.Pin35=PA13 (JTMS/SWDIO)
-Mcu.Pin36=PA14 (JTCK/SWCLK)
-Mcu.Pin37=PC10
-Mcu.Pin38=PC11
-Mcu.Pin39=PC12
+Mcu.Pin30=PH12
+Mcu.Pin31=PC8
+Mcu.Pin32=PC9
+Mcu.Pin33=PA9
+Mcu.Pin34=PA10
+Mcu.Pin35=PA11
+Mcu.Pin36=PA12
+Mcu.Pin37=PA13 (JTMS/SWDIO)
+Mcu.Pin38=PA14 (JTCK/SWCLK)
+Mcu.Pin39=PC10
 Mcu.Pin4=PI8
-Mcu.Pin40=PD2
-Mcu.Pin41=PD5
-Mcu.Pin42=PD6
-Mcu.Pin43=PD7
-Mcu.Pin44=PG9
-Mcu.Pin45=PG10
-Mcu.Pin46=PG11
-Mcu.Pin47=PG14
-Mcu.Pin48=PB9
-Mcu.Pin49=PI4
+Mcu.Pin40=PC11
+Mcu.Pin41=PC12
+Mcu.Pin42=PD2
+Mcu.Pin43=PD5
+Mcu.Pin44=PD6
+Mcu.Pin45=PD7
+Mcu.Pin46=PG9
+Mcu.Pin47=PG10
+Mcu.Pin48=PG11
+Mcu.Pin49=PG14
 Mcu.Pin5=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin50=PI5
-Mcu.Pin51=PI6
-Mcu.Pin52=PI7
-Mcu.Pin53=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin54=VP_SYS_VS_tim17
-Mcu.Pin55=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin56=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin57=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin58=VP_TIM14_VS_ClockSourceINT
-Mcu.Pin59=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin50=PI4
+Mcu.Pin51=PI5
+Mcu.Pin52=PI6
+Mcu.Pin53=PI7
+Mcu.Pin54=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin55=VP_SYS_VS_tim17
+Mcu.Pin56=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin57=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin58=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin60=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin7=PF6
-Mcu.Pin8=PF9
-Mcu.Pin9=PH0-OSC_IN (PH0)
-Mcu.PinsNb=61
+Mcu.Pin60=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin61=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin7=PI11
+Mcu.Pin8=PF6
+Mcu.Pin9=PF7
+Mcu.PinsNb=62
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -189,11 +199,6 @@ PA7.GPIO_Label=LUMEX_LCD_D7
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Output
-PA8.GPIOParameters=GPIO_Speed,GPIO_Label
-PA8.GPIO_Label=ADS1115_I2C3_SCL
-PA8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PA8.Mode=I2C
-PA8.Signal=I2C3_SCL
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
@@ -204,12 +209,6 @@ PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ILI_SPI2_SCK
 PB10.Mode=Full_Duplex_Master
 PB10.Signal=SPI2_SCK
-PB9.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PB9.GPIO_Label=ADS1115_ALERT
-PB9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PB9.GPIO_PuPd=GPIO_PULLUP
-PB9.Locked=true
-PB9.Signal=GPXTI9
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=ILI_SPI2_MOSI
 PC1.Mode=Full_Duplex_Master
@@ -282,17 +281,22 @@ PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
 PE6.Signal=GPXTI6
 PF6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PF6.GPIO_Label=BPM_CTRL_OUT
+PF6.GPIO_Label=BPM_CTRL_MCU
 PF6.GPIO_PuPd=GPIO_PULLUP
 PF6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF6.Signal=S_TIM16_CH1
+PF7.GPIOParameters=GPIO_Label
+PF7.GPIO_Label=ADC3_BPM_FB
+PF7.Locked=true
+PF7.Mode=IN3-Single-Ended
+PF7.Signal=ADC3_INP3
 PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PF9.GPIO_Label=OP_IN
 PF9.GPIO_PuPd=GPIO_PULLUP
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PF9.Signal=S_TIM14_CH1
 PG10.GPIOParameters=GPIO_Speed,GPIO_Label
-PG10.GPIO_Label=ILI_SPI1_CS
+PG10.GPIO_Label=ILI_SPI1_LCD_CS
 PG10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PG10.Locked=true
 PG10.Signal=GPIO_Output
@@ -314,34 +318,45 @@ PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
+PH11.GPIOParameters=GPIO_Label
+PH11.GPIO_Label=ADS1115_I2C4_SCL
+PH11.Locked=true
+PH11.Mode=I2C
+PH11.Signal=I2C4_SCL
+PH12.GPIOParameters=GPIO_Label
+PH12.GPIO_Label=ADS1115_I2C4_SDA
+PH12.Locked=true
+PH12.Mode=I2C
+PH12.Signal=I2C4_SDA
 PH6.GPIOParameters=GPIO_Speed,GPIO_Label
 PH6.GPIO_Label=ILI_SPI2_TOUCH_CS
 PH6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PH6.Locked=true
 PH6.Signal=GPIO_Output
 PH7.GPIOParameters=GPIO_Speed,GPIO_Label
-PH7.GPIO_Label=ILI_SPI_SD_CS
+PH7.GPIO_Label=ILI_SPI2_SD_CS
 PH7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PH7.Locked=true
 PH7.Signal=GPIO_Output
-PH8.GPIOParameters=GPIO_Speed,GPIO_Label
-PH8.GPIO_Label=ADS1115_I2C3_SDA
-PH8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PH8.Mode=I2C
-PH8.Signal=I2C3_SDA
+PI11.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PI11.GPIO_Label=ADS1115_ALERT
+PI11.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PI11.GPIO_PuPd=GPIO_NOPULL
+PI11.Locked=true
+PI11.Signal=GPXTI11
 PI4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PI4.GPIO_Label=LED_BRAKE
-PI4.GPIO_PuPd=GPIO_PULLUP
+PI4.GPIO_Label=LED_BACK
+PI4.GPIO_PuPd=GPIO_NOPULL
 PI4.Locked=true
 PI4.Signal=GPIO_Output
 PI5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PI5.GPIO_Label=LED_SELECT
-PI5.GPIO_PuPd=GPIO_PULLUP
+PI5.GPIO_PuPd=GPIO_NOPULL
 PI5.Locked=true
 PI5.Signal=GPIO_Output
 PI6.GPIOParameters=GPIO_PuPd,GPIO_Label
-PI6.GPIO_Label=LED_BACK
-PI6.GPIO_PuPd=GPIO_PULLUP
+PI6.GPIO_Label=LED_BRAKE
+PI6.GPIO_PuPd=GPIO_NOPULL
 PI6.Locked=true
 PI6.Signal=GPIO_Output
 PI7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
@@ -386,7 +401,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_TIM13_Init-TIM13-false-HAL-true,13-MX_ADC2_Init-ADC2-false-HAL-true,14-MX_TIM2_Init-TIM2-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM13_Init-TIM13-false-HAL-true,12-MX_ADC2_Init-ADC2-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_ADC3_Init-ADC3-false-HAL-true,15-MX_I2C4_Init-I2C4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
@@ -434,8 +449,9 @@ RCC.HCLKFreq_Value=200000000
 RCC.HRTIMFreq_Value=200000000
 RCC.I2C123CLockSelection=RCC_I2C123CLKSOURCE_PLL3
 RCC.I2C123Freq_Value=50000000
-RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123CLockSelection,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.I2C4CLockSelection=RCC_I2C4CLKSOURCE_PLL3
+RCC.I2C4Freq_Value=50000000
+RCC.IPParameters=ADCCLockSelection,ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,I2C123CLockSelection,I2C123Freq_Value,I2C4CLockSelection,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16CLockSelection,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=100000000
 RCC.LPTIM2Freq_Value=100000000
 RCC.LPTIM345Freq_Value=100000000
@@ -478,6 +494,8 @@ RCC.VCOInput2Freq_Value=12500000
 RCC.VCOInput3Freq_Value=12500000
 SH.ADCx_INP5.0=ADC2_INP5,IN5-Single-Ended
 SH.ADCx_INP5.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SH.GPXTI3.0=GPIO_EXTI3
@@ -492,8 +510,6 @@ SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.GPXTI9.0=GPIO_EXTI9
-SH.GPXTI9.ConfNb=1
 SH.S_TIM14_CH1.0=TIM14_CH1,Input_Capture1_from_TI1
 SH.S_TIM14_CH1.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
