almost done tbh

--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -19,9 +19,10 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
 FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL;forceSensorToSessionController,16,forcesensor_output_data,0,Dynamic,NULL,NULL;sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL;sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL;pidControllerToBpm,10,float,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL;bpmTask,49,128,bpmCtrl,Default,NULL,Dynamic,NULL,NULL;forceSensorTask,32,128,forceSensor,Default,NULL,Dynamic,NULL,NULL;pidTask,48,256,pidController,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -126,10 +127,10 @@ MxDb.Version=DB.6.0.150
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -266,17 +267,19 @@ PE3.Locked=true
 PE3.Signal=GPXTI3
 PE4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE4.GPIO_Label=ROT_EN_SW
-PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
-PE4.GPIO_PuPd=GPIO_NOPULL
+PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=GPXTI4
-PE5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=BTN_SELECT
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
-PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE6.GPIO_Label=BTN_BACK
+PE6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
 PE6.Signal=GPXTI6
@@ -359,16 +362,17 @@ PI6.GPIO_Label=LED_BRAKE
 PI6.GPIO_PuPd=GPIO_NOPULL
 PI6.Locked=true
 PI6.Signal=GPIO_Output
-PI7.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PI7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PI7.GPIO_Label=BTN_BRAKE
 PI7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PI7.GPIO_PuPd=GPIO_PULLUP
 PI7.Locked=true
 PI7.Signal=GPXTI7
-PI8.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PI8.GPIOParameters=GPIO_PuPd,GPIO_Label
 PI8.GPIO_Label=ROT_EN_B
-PI8.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PI8.GPIO_PuPd=GPIO_NOPULL
 PI8.Locked=true
-PI8.Signal=GPXTI8
+PI8.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -508,8 +512,6 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
-SH.GPXTI8.0=GPIO_EXTI8
-SH.GPXTI8.ConfNb=1
 SH.S_TIM14_CH1.0=TIM14_CH1,Input_Capture1_from_TI1
 SH.S_TIM14_CH1.ConfNb=1
 SH.S_TIM16_CH1.0=TIM16_CH1,PWM Generation1 CH1
