--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -19,10 +19,9 @@ CAD.provider=
 CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01,configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY
+FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01
 FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL;forceSensorToSessionController,16,forcesensor_output_data,0,Dynamic,NULL,NULL;sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL;sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL;pidControllerToBpm,10,float,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL;bpmTask,49,128,bpmCtrl,Default,NULL,Dynamic,NULL,NULL;forceSensorTask,32,128,forceSensor,Default,NULL,Dynamic,NULL,NULL;pidTask,48,256,pidController,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configLIBRARY_MAX_SYSCALL_INTERRUPT_PRIORITY=5
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
@@ -127,10 +126,10 @@ MxDb.Version=DB.6.0.150
 NVIC.ADC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI15_10_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.EXTI3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.EXTI4_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
-NVIC.EXTI9_5_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI4_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -260,26 +259,26 @@ PD7.GPIOParameters=GPIO_Label
 PD7.GPIO_Label=ILI_SPI1_MOSI
 PD7.Mode=Full_Duplex_Master
 PD7.Signal=SPI1_MOSI
-PE3.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE3.GPIO_Label=ROT_EN_A
 PE3.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PE3.GPIO_PuPd=GPIO_NOPULL
 PE3.Locked=true
 PE3.Signal=GPXTI3
 PE4.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE4.GPIO_Label=ROT_EN_SW
-PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PE4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=GPXTI4
 PE5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PE5.GPIO_Label=BTN_SELECT
-PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PE5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE5.GPIO_PuPd=GPIO_PULLUP
 PE5.Locked=true
 PE5.Signal=GPXTI5
-PE6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE6.GPIO_Label=BTN_BACK
-PE6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PE6.GPIO_PuPd=GPIO_PULLUP
 PE6.Locked=true
 PE6.Signal=GPXTI6
@@ -368,9 +367,8 @@ PI7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PI7.GPIO_PuPd=GPIO_PULLUP
 PI7.Locked=true
 PI7.Signal=GPXTI7
-PI8.GPIOParameters=GPIO_PuPd,GPIO_Label
+PI8.GPIOParameters=GPIO_Label
 PI8.GPIO_Label=ROT_EN_B
-PI8.GPIO_PuPd=GPIO_NOPULL
 PI8.Locked=true
 PI8.Signal=GPIO_Input
 PinOutPanel.RotationAngle=0
