--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -142,6 +142,7 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
+NVIC.TIM8_TRG_COM_TIM14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM8_UP_TIM13_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TimeBase=TIM17_IRQn
 NVIC.TimeBaseIP=TIM17
@@ -527,8 +528,10 @@ SPI2.VirtualType=VM_MASTER
 TIM13.IPParameters=Prescaler,Period
 TIM13.Period=40-1
 TIM13.Prescaler=200-1
+TIM14.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM14.Channel=TIM_CHANNEL_1
-TIM14.IPParameters=Channel
+TIM14.IPParameters=Channel,Prescaler,AutoReloadPreload
+TIM14.Prescaler=200-1
 TIM16.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM16.Channel=TIM_CHANNEL_1
 TIM16.IPParameters=Channel,Prescaler,Period,AutoReloadPreload,Pulse
