--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -44,7 +44,8 @@ Mcu.IP14=TIM13
 Mcu.IP15=TIM14
 Mcu.IP16=TIM16
 Mcu.IP17=USART1
-Mcu.IP18=USB_OTG_FS
+Mcu.IP18=USB_DEVICE
+Mcu.IP19=USB_OTG_FS
 Mcu.IP2=CORTEX_M7
 Mcu.IP3=FREERTOS
 Mcu.IP4=I2C4
@@ -53,7 +54,7 @@ Mcu.IP6=NVIC
 Mcu.IP7=RCC
 Mcu.IP8=SDMMC1
 Mcu.IP9=SPI1
-Mcu.IPNb=19
+Mcu.IPNb=20
 Mcu.Name=STM32H743IITx
 Mcu.Package=LQFP176
 Mcu.Pin0=PE3
@@ -114,11 +115,12 @@ Mcu.Pin58=VP_TIM13_VS_ClockSourceINT
 Mcu.Pin59=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin6=PC15-OSC32_OUT (OSC32_OUT)
 Mcu.Pin60=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin61=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin61=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin62=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin7=PI11
 Mcu.Pin8=PF6
 Mcu.Pin9=PF7
-Mcu.PinsNb=62
+Mcu.PinsNb=63
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743IITx
@@ -135,6 +137,7 @@ NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false\:false
@@ -544,6 +547,10 @@ TIM2.IPParameters=Prescaler,AutoReloadPreload
 TIM2.Prescaler=200-1
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USB_DEVICE.CLASS_NAME_FS=CDC
+USB_DEVICE.IPParameters=VirtualMode-CDC_FS,VirtualModeFS,CLASS_NAME_FS
+USB_DEVICE.VirtualMode-CDC_FS=Cdc
+USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
@@ -562,6 +569,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
 rtos.0.ip=FREERTOS
 isbadioc=false
