--- a/stm32_dyno_firmware_v2.ioc
+++ b/stm32_dyno_firmware_v2.ioc
@@ -20,8 +20,8 @@ CORTEX_M7.IPParameters=default_mode_Activation
 CORTEX_M7.default_mode_Activation=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,Queues01,configMAX_TASK_NAME_LEN
-FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL;sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL;sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL;pidControllerToBpm,10,float,0,Dynamic,NULL,NULL;sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL
-FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL;bpmTask,49,128,bpmCtrl,Default,NULL,Dynamic,NULL,NULL;forceSensorTask,32,128,forceSensor,Default,NULL,Dynamic,NULL,NULL;pidTask,40,256,pidController,Default,NULL,Dynamic,NULL,NULL;opticalSensorTask,8,128,opticalSensor,Default,NULL,Dynamic,NULL,NULL;sessionControllerTask,40,256,sessionController,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Queues01=sessionControllerToLumexLcd,25,session_controller_to_lumex_lcd,0,Dynamic,NULL,NULL;lumexLcdTimerInterrupt,1,HAL_StatusTypeDef,0,Dynamic,NULL,NULL;sessionControllerToBpm,10,session_controller_to_bpm,0,Dynamic,NULL,NULL;sessionControllerToForceSensor,16,bool,0,Dynamic,NULL,NULL;sessionControllerToPidController,5,session_controller_to_pid_controller,0,Dynamic,NULL,NULL;opticalEncoderToPidController,10,optical_encoder_output_data,0,Dynamic,NULL,NULL;pidControllerToBpm,10,float,0,Dynamic,NULL,NULL;sessionControllerToOpticalSensor,16,uint16_t,0,Dynamic,NULL,NULL;usbQueueEnable,16,uint16_t,0,Dynamic,NULL,NULL
+FREERTOS.Tasks01=lcdTask,16,256,lcdDisplay,Default,NULL,Dynamic,NULL,NULL;bpmTask,49,128,bpmCtrl,Default,NULL,Dynamic,NULL,NULL;forceSensorTask,32,128,forceSensor,Default,NULL,Dynamic,NULL,NULL;pidTask,40,256,pidController,Default,NULL,Dynamic,NULL,NULL;opticalSensorTask,8,128,opticalSensor,Default,NULL,Dynamic,NULL,NULL;sessionControllerTask,40,256,sessionController,Default,NULL,Dynamic,NULL,NULL;usbTaskEnable,8,128,StartTask07,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configMAX_TASK_NAME_LEN=32
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
@@ -408,7 +408,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM14_Init-TIM14-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_SPI2_Init-SPI2-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM13_Init-TIM13-false-HAL-true,12-MX_ADC2_Init-ADC2-false-HAL-true,13-MX_TIM2_Init-TIM2-false-HAL-true,14-MX_ADC3_Init-ADC3-false-HAL-true,15-MX_I2C4_Init-I2C4-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM16_Init-TIM16-false-HAL-true,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM14_Init-TIM14-false-HAL-true,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_SPI2_Init-SPI2-false-HAL-true,9-MX_TIM1_Init-TIM1-false-HAL-true,10-MX_TIM13_Init-TIM13-false-HAL-true,11-MX_ADC2_Init-ADC2-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true,13-MX_ADC3_Init-ADC3-false-HAL-true,14-MX_I2C4_Init-I2C4-false-HAL-true,15-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCCLockSelection=RCC_ADCCLKSOURCE_PLL3
 RCC.ADCFreq_Value=50000000
 RCC.AHB12Freq_Value=200000000
